# cogno-aegis

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_aegis/: __init__.py  crypto.py  errors.py  hmac_auth.py  input_guard.py  safety.py  types.py
docs/: HOST_INTEGRATION.md
examples/: host_min.py
tests/unit/: test_crypto.py  test_hmac_auth.py  test_input_guard.py  test_property.py
