[project]
name = "cogno-aegis"
version = "0.1.0"
description = "Pure security primitives for the Cogno stack — AES-256-GCM encryption at rest, constant-time HMAC/secret verification, and a neutral input-size + crisis screen. Host-injected, fail-loud, deps-minimal."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sudoers AI" }]
keywords = ["security", "encryption", "aes-gcm", "hmac", "webhook", "input-validation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Zero runtime deps for the hmac + input-guard half (stdlib only). The crypto
# half needs `cryptography`, kept as an optional extra so a host that only wants
# HMAC/guards stays dependency-free.
dependencies = []

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-aegis"
Repository = "https://github.com/sudoers-ai/cogno-aegis"
Issues = "https://github.com/sudoers-ai/cogno-aegis/issues"

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
dev = [
    "cryptography>=42.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_aegis*"]

[tool.setuptools.package-data]
cogno_aegis = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_aegis"]
warn_unused_ignores = true
